[gd_scene load_steps=3 format=3 uid="uid://brawasoc7mri6"]

[ext_resource type="Script" path="res://Scripts/main_menu_scene.gd" id="1_vtil1"]
[ext_resource type="PackedScene" uid="uid://de4oqte1nvre1" path="res://Models/Decor/parallax_container_node_2d.tscn" id="2_fwc7t"]

[node name="MainMenuScene" type="CanvasLayer"]
script = ExtResource("1_vtil1")

[node name="ParallaxContainerNode2D" parent="." instance=ExtResource("2_fwc7t")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 41.0
offset_right = 169.0
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Credit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credit
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
